2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* events/*.events *.unit_masks: move these files to subdir named
	  arch/processor_name/events and arch/processor_name/unit_masks
	* events/Makefile.am: update according
	
	* libop/op_events.c: now it's safe to allow loading events file from a
	  directory provided through environment var OPROFILE_EVENTS_FILE_DIR
	* libop/tests/alloc_counter_tests.c: use it
	* libop/tests/load_events_files_tests.c: use it

2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: revert last commit (allowed to find events files
	  description directory in alternate directory)

	* libop/tests/Makefile.am:
	* libop/tests/load_events_files_tests.c: new files. Validate events
	  description file by loading them.

	* libutil/op_cpufreq.c: comment why we don't have any code handling
	  s390

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in:
	* libop/Makefile.am: new subdir
	* libop/op_events.c: allow to retrieve events file dir through
	  environment variable
	* utils/op_help.c: move parse_events() and parsed_event struct to ...
	* libop/op_parse_event.h:
	* libop/op_parse_event.c: these new files

	* libop/tests/Makefile.am: new tests subdir
	* libop/tests/alloc_counter_tests.c: events mapping to counter nr tests
	* libop/tests/parse_event_tests.c: event parsing tests

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: add forward declaration
	* libop/op_alloc_counter.c: alloc counter in increasing number order,
	  it's less suprising.

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: if previous tests fails a corrupted samples
	  file can exist in test dir and will be re-used, remove() it.

2003-10-01  John Levon  <levon@movementarian.org>

	* daemon/opd_sfile.c:
	* libabi/op_import.cpp:
	* libop/op_interface.h:
	* libpp/locate_images.h: small cleanups

	* pp/opreport_options.cpp: don't complain about
	"-x -m all"
